--- a/package.json
+++ b/package.json
@@ -9,31 +9,42 @@
     "registry": "https://registry.npmjs.org/"
   },
   "exports": {
-    ".": "./dist/thrift-codegen.bundle.js",
-    "./metadata.json": "./dist/metadata.json",
-    "./package.json": "./package.json"
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    },
+    "./*": {
+      "import": {
+        "types": "./dist/*.d.mts",
+        "default": "./dist/*.mjs"
+      },
+      "require": {
+        "types": "./dist/*.d.ts",
+        "default": "./dist/*.js"
+      }
+    }
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/valitydev/dominator-proto.git"
-  },
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/valitydev/dominator-proto#readme",
-  "files": [
-    "dist/**/*.{js,d.ts,json,map}",
-    "**/*.thrift"
-  ],
-  "main": "./dist/thrift-codegen.bundle.js",
-  "types": "index.d.ts",
   "typesVersions": {
-    ">=4.6": {
+    "*": {
       "*": [
-        "dist/types/*"
+        "dist/*"
       ]
     }
   },
+  "files": [
+    "dist",
+    "proto"
+  ],
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/valitydev/dominator-proto#readme",
   "devDependencies": {
     "@vality/domain-proto": "2.0.1-45b0719.0",
-    "@vality/thrift-codegen": "2.3.2"
+    "@vality/thrift-codegen": "^3.0.0"
   }
 }
